style: fix non-mobile alignment of list names

--- a/src/components/sidebar/NewListInput.module.css
+++ b/src/components/sidebar/NewListInput.module.css
@@ -1,7 +1,14 @@
 .wrapper {
     display: flex;
-    margin: 14px 20px 14px 12px;
+    margin: 18px 20px 18px 12px;
     align-items: center;
+}
+
+@media (max-width: 480px) {
+    .wrapper {
+        margin-top: 14px;
+        margin-bottom: 14px;
+    }
 }
 
 .listsHeader {
